--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-##MODIFIQUE O NOME DESTE ARQUIVO PARA .env E ALTERE O VALOR DAS VARIAVEIS
-DB_USER=root
-DB_PASSWORD=12345
-DB_URL=jdbc:mysql://wagnerweneirt.com.br:3306/meubd
+DB_USER=tads21_ryssia
+DB_PASSWORD=tads21_ryssia
+DB_URL=jdbc:mysql://wagnerweinert.com.br:3306/tads21_ryssia
